# pycounts-labdmitriy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts/: datasets.py
src/pycounts_labdmitriy/: __init__.py
tests/: test_pycounts.py  test_pycounts_labdmitriy.py
