[tool.poetry]
name = "pycounts-labdmitriy"
version = "0.1.0"
description = "Calculate word counts in a text file"
authors = ["Dmitry Labazkin"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pycounts", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
