[tool.poetry]
name = "pycounts-labdmitriy"
version = "0.1.0"
description = "Calculate word counts in a text file"
authors = ["Dmitry Labazkin"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pycounts", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.9.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
